2003-09-12  JP Rosevear <jpr@ximian.com>

	* cal-client/client-test.c (cal_opened_cb): listen for other query
	signals

	* cal-client/cal-listener.h: add signals

	* cal-client/cal-listener.c (impl_notifyObjectCreated): implement
	(impl_notifyObjectModified): implement
	(cal_listener_class_init): assign epv implementations
	(cal_listener_class_init): add create/modify object signals

	* cal-client/cal-client.h: add protos

	* cal-client/cal-client.c (cal_object_created_cb): object created
	callback
	(cal_object_modified_cb): object modified callback
	(cal_client_init): listen for create/modify object signals from
	the listener
	(cal_client_create_object): call the create object method
	(cal_client_modify_object): call the modify object method

	* cal-client/client-test.c (cal_opened_cb): listen for all the
	query signals, tidy

2003-09-12  JP Rosevear <jpr@ximian.com>

	* pcs/cal.c (impl_Cal_createObject): implement
	(impl_Cal_modifyObject): ditto
	(cal_class_init): set epv methods for create/modify

	* pcs/cal-backend.h: add protos, vmethod

	* pcs/cal-backend.c (cal_backend_class_init): init new vmethods
	(cal_backend_create_object): call through
	(cal_backend_modify_object): ditto

	* pcs/cal-backend-sync.h: add protos, vmethods

	* pcs/cal-backend-sync.c (cal_backend_sync_create_object): call
	through
	(cal_backend_sync_modify_object): ditto
	(_cal_backend_create_object): create object and notify
	(_cal_backend_modify_object): modify object and notify

	* pcs/cal-backend-file.c (cal_backend_file_create_object):
	skeleton routine for creating objects
	(cal_backend_file_modify_object): ditto for modifying

	* idl/evolution-calendar.idl: add createObject and modifyObject
	calls

2003-09-12  JP Rosevear  <jpr@ximian.com>

	* pcs/cal.c (cal_notify_object_removed): its uid, not uids

2003-09-12  JP Rosevear <jpr@ximian.com>

	* pcs/query.h: add protos

	* pcs/query.c (query_object_matches): use the sexp to check for a
	match